kubernetes/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solar-system-app
  namespace: production
spec:
  replicas: 3
  selector:
    matchLabels:
      app: solar-system
  template:
    metadata:
      labels:
        app: solar-system
    spec:
      containers:
      - name: solar-system
        image: docker.io/seifwafeek/solar-system-app:latest
        ports:
        - containerPort: 3000
