kubernetes/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solar-system-service
  namespace: production
spec:
  selector:
    app: solar-system
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
